--- a/docker-monolith/infra/ansible/playbooks/docker_gitlab.yml
+++ b/docker-monolith/infra/ansible/playbooks/docker_gitlab.yml
@@ -11,12 +11,12 @@
         - '/srv/gitlab/config'
         - '/srv/gitlab/data'
         - '/srv/gitlab/logs'
-    - name: Start gitlab docker container
+    - name: Start gitlab-ci docker container
       community.docker.docker_container:
         name: gitlab
         image: gitlab/gitlab-ce:latest
         env:
-          external_url: "http://{{ansible_host}}"
+          GITLAB_OMNIBUS_CONFIG: "external_url 'http://{{ansible_host}}'"
         published_ports:
           - '80:80'
           - '443:443'
@@ -25,5 +25,14 @@
           - '/srv/gitlab/config:/etc/gitlab'
           - '/srv/gitlab/logs:/var/log/gitlab'
           - '/srv/gitlab/data:/var/opt/gitlab'
+        state: started
+        restart_policy: always
+    - name: Start gitlab-runner docker container
+      community.docker.docker_container:
+        name: gitlab-runner
+        image: gitlab/gitlab-runner:latest
+        volumes:
+          - '/srv/gitlab-runner/config:/etc/gitlab-runner'
+          - '/var/run/docker.sock:/var/run/docker.sock'
         state: started
         restart_policy: always
