--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,6 +21,7 @@ build_job:
 
 build_container:
   stage: build
+  image: 'docker:latest'
   script:
     - docker build -t redditapp:$CI_COMMIT_REF_NAME
   environment:
